Adicionando documentaçao as rotas.
