# src/routes/v1/roles.routes.js
@@ -4,10 +4,11 @@ const { isOwner, onlyCanAccessWith } = require('../../middlewares/auth');
 const { WRITE } = require('../../utils/constants/permissions');
 const rolesRoutes = express.Router();
 
+
 rolesRoutes.post('/roles', isOwner, RoleController.create);
-
 rolesRoutes.get('/roles', onlyCanAccessWith([WRITE]), RoleController.index);
+rolesRoutes.post('/roles/:role_id', isOwner, RoleController.addPermission);
 
-rolesRoutes.post('/roles/:role_id', isOwner, RoleController.addPermissions);
+
 
 module.exports = rolesRoutes;
